:memo: Fix discord webhook